--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <style>
         body, html {
@@ -114,6 +116,10 @@
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.5);
         }
+        .cvbtn a {
+            color: rgb(126, 25, 25);
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -124,13 +130,13 @@
                 <div class="navlinks">
                     <a href="#" class="nav-headings">Home</a>
                     <a href="skill.html" class="nav-headings">About</a>
-                    <a href="certi.html" class="nav-headings">MyCertificates</a>
+                    <a href="certi.html" class="nav-headings">My Certificates</a>
                     <div class="dropdown">
                         <button class="dropbtn">Contact</button>
                         <div class="dropdown-content">
                           <a href="#">Facebook</a>
                           <a href="https://www.instagram.com/vishnuvardhan.1/">Instagram</a>
-                          <a href="https://www.linkedin.com/in/vishnu-vardhan-693148290/">Linkedin</a>
+                          <a href="https://www.linkedin.com/in/vishnu-vardhan-693148290/">LinkedIn</a>
                         </div>
                      </div>
                 </div>
@@ -148,7 +154,7 @@
         </div>
         <div class="cvbtn">
             <button>
-                <a href="#">Download CV</a>
+                <a href="#" download>Download CV</a>
             </button>
         </div>
     </div>
