--- a/index.html
+++ b/index.html
@@ -79,21 +79,18 @@
             display: block;
         }
         .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: flex-start;
-    height: auto; /* Change from 35vh to auto */
-    margin-top: 12vh;
-    margin-left: 5vh;
-    margin-right: 5vh; /* Adjusted for better layout */
-    text-align: left;
-    padding: 20px; /* Adjusted padding */
-    color: rgb(255, 249, 240);
-    background-color: rgba(0, 0, 0, 0.5); /* Optional: Add a semi-transparent background */
-    border-radius: 10px; /* Optional: Add rounded corners */
-}
-    
+            display: flex;
+            flex-direction: column;
+            justify-content: left;
+            align-items: flex-start;
+            height: 35vh;
+            margin-top: 12vh;
+            margin-left: 5vh;
+            margin-right: 80vh;
+            text-align: left;
+            padding: 20vh 1vh;
+            color: rgb(255, 249, 240);
+        }
         h1 {
             font-size: 40px;
             margin-bottom: 20px;
